--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Responsive Design</title>
-    <meta name="description" content="responsive design, media query example" />
+    <meta name="description" content="responsive design" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined|Material+Icons+Two+Tone"
@@ -77,7 +77,7 @@
 
       <div class="footnote">
         <span class="material-icons-two-tone" id="palette"> palette </span>
-        <span>Made by Sidney</span>
+        <span>Sidney Hopkins</span>
       </div>
     </div>
 
